# IntroToDE

./: .gitignore
HW1/: README.md  client_async.py  items_async.csv  pyproject.toml
HW1/src/orders_server/: main.py  models.py
HW2/: generate-data.py  pyproject.toml
HW2/notebooks/: hw2_nimbus_megamart.ipynb
HW2/notebooks/.ipynb_checkpoints/: hw2_nimbus_megamart-checkpoint.ipynb
labs/: pyproject.toml
labs/lab02/: 00-gen-data.py  users.json
labs/lab03/: README.md  docker-compose.yml  setup_and_solve.sql  solution.sql  solution.submit.sql
labs/lab03/data/: people.csv  purchases.csv  sessions.csv  swipes.csv
labs/lab05/: Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
labs/lab05/dags/: fuel_etl_dag.py
labs/lab05/init-db/: 01_create_tables.sql
microlab/: main.py  pyproject.toml  pyspark_hdfs_demo.ipynb
minilab/: 03-gen-data.py  04-kafka.py  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
