[project]
name = "orders-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "faker>=37.6.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.2.0",
    "ratelimit>=2.2.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[project.scripts]
orders_server = "orders_server.cli:main"

[[tool.uv.index]]
url = "https://pkgs.safetycli.com/repository/public/pypi/simple/"
default = true

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"



[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
